# advent_of_code

./: Cargo.toml  README.md
data/2023/5/: input.txt
data/2023/6/: input.txt
data/2024/10/: sample_basic.txt
data/2024/7/: sample2.txt
src/: direction.rs  error.rs  grid_template.rs  lib.rs  main.rs  point.rs
